# senlac-waterflood-analysis

./: .codespellrc  Dockerfile  README.md  pyproject.toml  requirements.yml  run_crm.py
data/: gain_distance.feather
mpi/: productivity_index.py
notebooks/: Basic statistics.ipynb  Breakthrough.ipynb  Interwell distance and angle.ipynb  Motivating CRM.ipynb  R regression.ipynb  Senlac-CRM vs MPI fits.ipynb  Timeseries analysis.ipynb  connectivity_bayes.ipynb  distance_depo_azi_seaborn.ipynb  stats.ipynb
src/: multiwell_productivity_index.py  utilities.py
src/senlac/: __init__.py  main.py  run_crm.py
