[project]
name = "senlac"
version = "0.1.0"
description = "Senlac analysis"
authors = [
    { name = "Frank Male", email = "frank.male@psu.edu" }
]
# license =  {file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "matplotlib >=3.4.3",
    "numpy >=1.22",
    "openpyxl",
    "pandas >=1.3.4",
    "pyarrow",
    "pywaterflood >=0.1.0",
    "scipy >=1.7.1",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]

[project.scripts]
run_crm = "senlac.run_crm:main"


[build-system]
requires = ["hatchling>=0.7"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
